<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingupActivity"
    android:background="@color/PrimaryGreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:orientation="vertical"
        android:background="@color/PrimaryGreen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_Title_Sign_up_Activity"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:textSize="30dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/TV_Second_Title_Sign_up_Activity"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="270dp"
            android:layout_height="185dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/smartfarmlogo" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/layout_bg">

        <TextView
            android:id="@+id/TV_full_name_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/TV_fullname"
            android:textColor="@color/black"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ET_full_name_Activity_Signup"
            android:background="@drawable/edit_text_border"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/TV_fullname"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_full_name_Activity_Signup" />

        <TextView
            android:id="@+id/TV_email_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/TV_email_address"
            android:textColor="@color/black"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_full_name_Activity_Signup" />

        <EditText
            android:id="@+id/ET_email_Activity_Signup"
            android:background="@drawable/edit_text_border"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_email_Activity_Signup"/>

        <TextView
            android:id="@+id/TV_password_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/Str_password"
            android:textColor="@color/black"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_email_Activity_Signup" />

        <EditText
            android:id="@+id/ET_password_Activity_Signup"
            android:background="@drawable/edit_text_border"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/Str_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_password_Activity_Signup" />

        <TextView
            android:id="@+id/TV_comfirm_password_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:selectAllOnFocus="true"
            android:text="@string/TV_confirmpassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_password_Activity_Signup" />

        <EditText
            android:id="@+id/ET_comfirm_password_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/TV_confirmpassword"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_comfirm_password_Activity_Signup" />

        <TextView
            android:id="@+id/TV_forgotpassword_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/Str_Forgot_password"
            android:textColor="@color/PrimaryGreen"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ET_comfirm_password_Activity_Signup" />

        <Button
            android:id="@+id/Button_Sign_Up_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp"
            android:text="@string/TV_signup"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_forgotpassword_Activity_Signup"
            app:layout_constraintVertical_bias="0.2"/>

        <TextView
            android:id="@+id/TV_one_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/TV_already_account"
            android:textColor="@color/black"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button_Sign_Up_Activity_Signup" />

        <TextView
            android:id="@+id/TV_Signin_Activity_Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/TV_signin"
            android:textColor="@color/PrimaryGreen"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Button_Sign_Up_Activity_Signup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>