<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/air_sensor_fragment_layout"
    tools:context=".FragmentTabLuchtModuleMain">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/exposure"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:text="Air module temperature and humidity"
                android:textSize="25dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/drop"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/TV_humidity_percent_module_Activity_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="60"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:textSize="22dp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/TV_temperature_celcius_FragmentTabLuchtModuleMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/TV_percent_sign"
                            android:layout_marginTop="10dp"
                            android:textSize="22dp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TV_Humidity"
                        android:layout_marginStart="5dp"
                        android:textSize="15dp"
                        android:textColor="@color/Gray"/>
                </LinearLayout>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/celsius"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="15dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        <TextView
                            android:id="@+id/TV_temperature_celcius_module_FragmentTabLuchtModuleMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="21.0"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:textSize="22dp"
                            android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/TV_humidity_percent_Activity_home"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/TV_celcius_sign"
                                android:layout_marginTop="10dp"
                                android:textSize="22dp"
                                android:textColor="@color/black"/>

                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/TV_temperature"
                            android:layout_marginStart="5dp"
                            android:textSize="15dp"
                            android:textColor="@color/Gray"/>
                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>